<resources>
    <string name="app_name">TreeTable</string>
    <string name="title_home">Home</string>
    <string name="settings">Settings</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="projects">Projects</string>
    <string name="node">Node</string>
    <string name="account">Account</string>
    <string name="add">Add</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="server">server</string>
    <string name="user_details">User Details</string>
    <string name="sign_out">Sign Out</string>
</resources>